# winnex-audit-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bindings/: py_module.cpp
examples/: bench_audit.cpp
include/winnex_audit/: audit_trail.h  engine.h  projection.h
src/: engine.cpp  projection.cpp
